--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AC_INIT([primp], [0.1], [tho.feron@gmail.com])
 AC_CONFIG_SRCDIR([src/primp_config.c])
 AC_CONFIG_HEADERS([config.h])
 
+AC_CONFIG_MACRO_DIRS([m4])
+
 AM_INIT_AUTOMAKE([-Wall] [subdir-objects])
 
 AC_PROG_CC
@@ -19,6 +21,7 @@ AC_TYPE_INT16_T
 AC_TYPE_INT32_T
 AC_TYPE_INT8_T
 AC_TYPE_SIZE_T
+AC_TYPE_SSIZE_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT8_T
@@ -27,7 +30,21 @@ AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([memset socket strdup])
 
+AX_PTHREAD
+LIBS="$PTHREAD_LIBS $LIBS"
+CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+CC="$PTHREAD_CC"
+
 PKG_CHECK_MODULES([CHECK], [check >= 0.9.4])
+
+AC_ARG_ENABLE([syslog],
+        [  --disable-syslog        disable logging to syslog],
+        [syslog=${enableval}], [syslog=yes])
+
+if test "x${syslog}" = xyes
+then
+        AC_DEFINE([SYSLOG_LOGGING], 1, [logging with syslog enabled])
+fi
 
 AC_CONFIG_FILES([
         Makefile
