--- a/example.conf
+++ b/example.conf
@@ -1,15 +1,18 @@
 {
         hostnames "127.0.0.1" "localhost";
-        ports 8080;
+        ports 8080 8081;
 
         [
                 1 {
-                        static-path "src";
-                        server "localhost" 8000;
+                        tag "v1";
+                        static-path "/path1";
+                        server "localhost" 3001;
                 }
 
                 9 {
-                        static-path "tests";
+                        tag "v2";
+                        static-path "/path2";
+                        server "localhost" 3002;
                 }
         ]
 }
