--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,3 @@
-SUBDIRS = src tests
-dist_doc_DATA = README
+ACLOCAL_AMFLAGS = -I m4
+SUBDIRS = include common libharp src tests/unit tests/memory doc
+dist_doc_DATA = README example.conf
