--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS = -Wall
 
 noinst_LTLIBRARIES = libcommon.la
-libcommon_la_SOURCES = memory.c memory.h
+libcommon_la_SOURCES = smem.c smem.h
