--- a/tests/unit/fixtures/full.conf
+++ b/tests/unit/fixtures/full.conf
@@ -2,12 +2,17 @@
   hostnames "blah" "bluh";
   ports 1 2;
 
+  {
+    tag "subconfig";
+  }
+
   [
     2 {
       ports 2;
       static-path "/path1";
       server "localhost" 1;
     }
+
     1 {
       static-path "/path2";
       server "localhost" 2;
