--- a/website/demo/harp.conf
+++ b/website/demo/harp.conf
@@ -1,18 +1,18 @@
 {
-  hosts "demo.harphttp.org";
-  ports 81;
+  hostnames "demo.harphttp.org";
+  ports 80;
 
   [
     25 {
-      static-path "/apps/court/demo/orange";
+      static-path "/apps/harphttp/demo/orange";
     }
 
     35 {
-      static-path "/apps/court/demo/green";
+      static-path "/apps/harphttp/demo/green";
     }
 
     40 {
-      static-path "/apps/court/demo/blue";
+      static-path "/apps/harphttp/demo/blue";
     }
   ]
 }
